==> consp/lcd8-re/src/hal/lcd8h/gd32f303/lcd.c <==
#include "lcd.h"
#include "hal/lcd8/gd32f303/lcd.h"
#include "uart.h"
#include "gd32f30x.h"
#include <cmsis/core/cmsis_gcc.h>
#define STARTUP_COMMAND_LENGTH 14

void lcd_backlight_init(void) {

    timer_oc_parameter_struct timer_ocintpara;
    timer_parameter_struct timer_initpara;

    rcu_periph_clock_enable(RCU_TIMER13);
    timer_deinit(TIMER13);

    timer_initpara.prescaler         = 120-1; // 1MHz
    timer_initpara.alignedmode       = TIMER_COUNTER_EDGE;
    timer_initpara.counterdirection  = TIMER_COUNTER_UP;
    timer_initpara.period            = 99; // 10khz
    timer_initpara.clockdivision     = TIMER_CKDIV_DIV1;
    timer_initpara.repetitioncounter = 0;
    timer_init(TIMER13 ,&timer_initpara);

    timer_ocintpara.outputstate  = TIMER_CCX_ENABLE;
    timer_ocintpara.outputnstate = TIMER_CCXN_DISABLE;
    timer_ocintpara.ocpolarity   = TIMER_OC_POLARITY_HIGH;
    timer_ocintpara.ocnpolarity  = TIMER_OCN_POLARITY_HIGH;
    timer_ocintpara.ocidlestate  = TIMER_OC_IDLE_STATE_LOW;
    timer_ocintpara.ocnidlestate = TIMER_OCN_IDLE_STATE_LOW;

    timer_channel_output_config(TIMER13,TIMER_CH_0,&timer_ocintpara);
    
    timer_channel_output_pulse_value_config(TIMER13,TIMER_CH_0, 99);
    timer_channel_output_mode_config(TIMER13,TIMER_CH_0,TIMER_OC_MODE_PWM0);
    /* timer_channel_output_shadow_config(TIMER13,TIMER_CH_0,TIMER_OC_SHADOW_DISABLE); */

    /* tmr enable counter */
    /* timer_auto_reload_shadow_enable(TIMER13); */
    timer_enable(TIMER13);
}

void lcd_init(void) {
    
    rcu_periph_clock_enable(RCU_GPIOA);
    rcu_periph_clock_enable(RCU_GPIOB);
    rcu_periph_clock_enable(RCU_GPIOC);
    rcu_periph_clock_enable(RCU_AF);
    
    /* SWD remap */
    gpio_pin_remap_config(GPIO_SWJ_SWDPENABLE_REMAP, ENABLE);
    /* GPIOB output */
    gpio_init(GPIOB, GPIO_MODE_OUT_PP, GPIO_OSPEED_MAX, GPIO_PIN_ALL); // GPIOB for data bus
    gpio_init(GPIOA, GPIO_MODE_AF_PP, GPIO_OSPEED_10MHZ, GPIO_PIN_7);  // GPIOA - 7 for pwm backlight

    lcd_backlight_init();

    // init clocks

    // Read strobe
    gpio_init(GPIOC, GPIO_MODE_AF_PP, GPIO_OSPEED_MAX, PIN_READ);
    // Write strobe
    gpio_init(GPIOC, GPIO_MODE_AF_PP, GPIO_OSPEED_MAX, PIN_WRITE);
    // Command/Data
    gpio_init(GPIOC, GPIO_MODE_AF_PP, GPIO_OSPEED_MAX, PIN_CD);
    // Chip select
    gpio_init(GPIOC, GPIO_MODE_AF_PP, GPIO_OSPEED_MAX, PIN_CS);

    //CLEAR_DATA();
    SET_WRITE();
    CS_ACTIVE;
    READ_IDLE;
    WRITE_IDLE;
    COMMAND;


#ifdef DMA_WRITE

    crm_periph_clock_enable(CRM_DMA2_PERIPH_CLOCK, TRUE);
    crm_periph_clock_enable(CRM_IOMUX_PERIPH_CLOCK, TRUE);
    crm_periph_clock_enable(CRM_TMR1_PERIPH_CLOCK, TRUE);

    gpio_pin_remap_config(TMR1_GMUX_0010, TRUE);
    static dma_init_type dma_init_struct = {0};

    tmr_reset(TMR1);
    /* tmr enable counter */
    tmr_output_config_type tmr_output_struct;
    tmr_base_init(TMR1, 15, 0);
    /* tmr_base_init(TMR1, 11, 0); */
    tmr_cnt_dir_set(TMR1, TMR_COUNT_UP);
    tmr_clock_source_div_set(TMR1, TMR_CLOCK_DIV1);
    tmr_output_default_para_init(&tmr_output_struct);
    tmr_output_struct.oc_mode = TMR_OUTPUT_CONTROL_PWM_MODE_B;
    tmr_output_struct.oc_output_state = TRUE;
    tmr_output_struct.oc_polarity = TMR_OUTPUT_ACTIVE_LOW;
    tmr_output_struct.oc_idle_state = FALSE;
    tmr_output_channel_config(TMR1, TMR_SELECT_CHANNEL_4, &tmr_output_struct);
    tmr_channel_value_set(TMR1, TMR_SELECT_CHANNEL_4, 12);
    /* tmr_channel_value_set(TMR1, TMR_SELECT_CHANNEL_4,  8); */

    /* tmr_interrupt_enable(TMR1, TMR_OVF_INT, TRUE); */

    /* tmr_dma_request_enable(TMR1, TMR_C4_DMA_REQUEST, TRUE); */
    tmr_dma_request_enable(TMR1, TMR_OVERFLOW_DMA_REQUEST, TRUE);

    dma_reset(DMA2_CHANNEL1);
    dma_init_struct.buffer_size = 0;
    dma_init_struct.direction = DMA_DIR_MEMORY_TO_PERIPHERAL;
    dma_init_struct.memory_base_addr = 0;
    dma_init_struct.memory_data_width = DMA_MEMORY_DATA_WIDTH_HALFWORD;
    dma_init_struct.memory_inc_enable = TRUE;
    dma_init_struct.peripheral_base_addr = (uint32_t)&GPIOB->odt;
    dma_init_struct.peripheral_data_width = DMA_PERIPHERAL_DATA_WIDTH_HALFWORD;
    dma_init_struct.peripheral_inc_enable = FALSE;
    dma_init_struct.priority = DMA_PRIORITY_HIGH;
    dma_init_struct.loop_mode_enable = FALSE;
    dma_init(DMA2_CHANNEL1, &dma_init_struct);

    dma_interrupt_enable(DMA2_CHANNEL1, DMA_FDT_INT, TRUE);
    nvic_priority_group_config(NVIC_PRIORITY_GROUP_4);
    nvic_irq_enable(DMA2_Channel1_IRQn, 0, 0);
    nvic_irq_enable(TMR1_OVF_TMR10_IRQn, 1, 0);

    
    /* dma_flexible_config(DMA2, FLEX_CHANNEL1, DMA_FLEXIBLE_TMR1_CH4); */
    dma_flexible_config(DMA2, FLEX_CHANNEL1, DMA_FLEXIBLE_TMR1_OVERFLOW);
    
    TMR1->brk_bit.oen = 1;

    /* while(1) { */
    /*     dma_write(dma_test_data, 16); */
    /*     delay_us(10); */
    /* } */
#endif

    CS_ACTIVE;
}

void lcd_backlight(uint32_t value) { // 1-100
    if (value < 1) value = 2;
    else if (value > 100) value = 100;
    timer_channel_output_pulse_value_config(TIMER13,TIMER_CH_0,value-1);
}

void read_register(uint8_t command, void *location, uint32_t bits, uint32_t num) {
    SET_WRITE();
    write_cmd(command);
    SET_READ();
    /* //CS_ACTIVE; */
    if (bits) {
        uint16_t *location_16 = (uint16_t *) location;
        while (num--) {
            read_data_16bit(location_16++);
        }
    } else {
        uint8_t *location_8 = (uint8_t *) location;
        while (num--) {
            read_data_8bit(location_8++);
        }
    }
    /* //CS_IDLE; */
    SET_WRITE();
}

UG_RESULT lcd_fill(UG_S16 x1, UG_S16 y1, UG_S16 x2, UG_S16 y2, UG_COLOR color) {
   lcd_set_address_window(x1, y1, x2, y2);
   write_cmd(ILI_MEMORY_WRITE);
   lcd_fill_pixels(((x2-x1) + 1) * ((y2-y1) + 1), color);
   return UG_RESULT_OK;
}

void lcd_fill(uint32_t x1, uint32_t y1, uint32_t x2, uint32_t y2, uint16_t color) {
   lcd_set_address_window(x1, y1, x2, y2);
   write_cmd(ILI_MEMORY_WRITE);
   lcd_fill_pixels(((x2-x1) + 1) * ((y2-y1) + 1), color);
}

void lcd_lvgl_flush(lv_display_t *display, const lv_area_t *area, uint8_t *pixmap) {
#else
void lcd_lvgl_flush(lv_disp_drv_t *display, const lv_area_t *area, lv_color_t *pixmap) { 
#endif
    uint16_t *pixels = (uint16_t *) pixmap;
    uint32_t length = 0;
    length = (area->y2 - area->y1) + 1;
    length *= ((area->x2 - area->x1) + 1);
    memcpy(&nar, area, sizeof(lv_area_t));
    nl = length;
    
    lcd_set_address_window(area->x1, area->y1, area->x2, area->y2);
    write_cmd(ILI_MEMORY_WRITE);
#ifdef DMA_WRITE 
    dp = display;
    DATA;
    dma_write(pixels, length, area->x2, area->y2);
#else
#pragma GCC unroll 8
    while(length--) write_data(*pixels++);

#if LVGL_VERSION_MAJOR == 9
    lv_display_flush_ready(display);
#else
    lv_disp_flush_ready(display);
#endif
#endif
}

#if LVGL_VERSION_MAJOR == 9
void lcd_draw_large_text(uint32_t x, uint32_t y, const lv_image_dsc_t *img, uint16_t color) {
    if (img->header.cf == LV_COLOR_FORMAT_I1) {
#else
void lcd_draw_large_text(uint32_t x, uint32_t y, const lv_img_dsc_t *img, uint16_t color) {
    if (img->header.cf == LV_IMG_CF_INDEXED_1BIT) {
#endif
        // images stored as 1bpp, need to iterate over and draw raw
#ifdef DMA_WRITE
/*
 * Calculation speed exceeds dma draw time at 8 lines or more
 * 1.865ms non-dma -Os
 * 0.72ms non-dma -O3/2/1/fast
 * 1.1ms per char with 37 lines
 * 1.07ms per char with 8 lines
 * 1.12ms per char with 4 lines
 */
        // items are 148*88, so 37 cycles
#define BLOB_LINES 4 
#define BLOB_SIZE (88*BLOB_LINES)
        uint16_t blob[BLOB_SIZE]; // expand and dma draw
        uint16_t blob2[BLOB_SIZE]; // expand and dma draw
        uint16_t *cb = NULL;
        uint8_t *data = (uint8_t *) img->data;
        data += 8;
        int cycles = 0;
        cb = (cb == blob) ? blob2 : blob ;
        while(cycles < 148 / BLOB_LINES) {
            // expand
            int32_t i = 0;
            while(i < BLOB_SIZE) {
                register uint32_t vdata = *data;
                cb[i++] = (vdata & 0x80) ? 0x0000 : color;
                cb[i++] = (vdata & 0x40) ? 0x0000 : color;
                cb[i++] = (vdata & 0x20) ? 0x0000 : color;
                cb[i++] = (vdata & 0x10) ? 0x0000 : color;
                cb[i++] = (vdata & 0x08) ? 0x0000 : color;
                cb[i++] = (vdata & 0x04) ? 0x0000 : color;
                cb[i++] = (vdata & 0x02) ? 0x0000 : color;
                cb[i++] = (vdata & 0x01) ? 0x0000 : color;
                data++;
            }
            // wait
            while(!dma_ready);
            // set address
            lcd_set_address_window(x, y, x + img->header.w - 1, y + (BLOB_LINES - 1) < (y + img->header.h - 1) ? y + (BLOB_LINES - 1) : (y + img->header.h - 1));
            // send
            write_cmd(ILI_MEMORY_WRITE);
            DATA;
            dma_write(cb, BLOB_SIZE, x + img->header.w - 1, y + (BLOB_LINES - 1) < (y + img->header.h - 1) ? y + (BLOB_LINES - 1) : (y + img->header.h - 1));
            y += BLOB_LINES;
            cycles++;
            cb = (cb == blob) ? blob2 : blob;
        }
        while(!dma_ready);
#else
        lcd_set_address_window(x, y, x + img->header.w - 1, y + img->header.h - 1);
        uint32_t length = (img->header.w * img->header.h) >> 3;
        uint8_t *data = (uint8_t *) img->data;
        data += 8;
        write_cmd(ILI_MEMORY_WRITE);
        while(length--) {
            // convert
            register uint32_t vdata = *data;
            write_data((vdata & 0x80) ? 0x0000 : color);
            write_data((vdata & 0x40) ? 0x0000 : color);
            write_data((vdata & 0x20) ? 0x0000 : color);
            write_data((vdata & 0x10) ? 0x0000 : color);
            write_data((vdata & 0x08) ? 0x0000 : color);
            write_data((vdata & 0x04) ? 0x0000 : color);
            write_data((vdata & 0x02) ? 0x0000 : color);
            write_data((vdata & 0x01) ? 0x0000 : color);
            data++;
        }
#endif
    }
}
