==> consp/lcd8-re/src/hal/custom/stm32h743/lcd.c <==
#include <string.h>
#include <stdio.h>
#include "lvgl.h"
#include "stm32h7xx_ll_dma2d.h"
#include "draw/dma2d/lv_draw_dma2d.h"
#include "config.h"
#include "lcd.h"
#include "hal/custom/stm32h743/lcd.h"
#include "uart.h"
#define LCD_CMD_ADDR	*(volatile uint16_t*)(0x60000000)
#define LCD_DATA_ADDR	*(volatile uint16_t*)(0x60020000)
#define STARTUP_COMMAND_LENGTH 14

void lcd_backlight_init(void) {

    TIM_MasterConfigTypeDef sMasterConfig = {0};
    TIM_OC_InitTypeDef sConfigOC = {0};
    GPIO_InitTypeDef GPIO_InitStruct = {0};

    __HAL_RCC_TIM4_CLK_ENABLE();

    htim4.Instance = TIM4;
    htim4.Init.Prescaler = 2400-1; //100khz
    htim4.Init.CounterMode = TIM_COUNTERMODE_UP;
    htim4.Init.Period = 100;
    htim4.Init.ClockDivision = TIM_CLOCKDIVISION_DIV1;
    htim4.Init.AutoReloadPreload = TIM_AUTORELOAD_PRELOAD_DISABLE;
    if (HAL_TIM_PWM_Init(&htim4) != HAL_OK)
    {
        Error_Handler();
    }
    sMasterConfig.MasterOutputTrigger = TIM_TRGO_RESET;
    sMasterConfig.MasterSlaveMode = TIM_MASTERSLAVEMODE_DISABLE;
    if (HAL_TIMEx_MasterConfigSynchronization(&htim4, &sMasterConfig) != HAL_OK)
    {
        Error_Handler();
    }
    sConfigOC.OCMode = TIM_OCMODE_PWM1;
    sConfigOC.Pulse = 50;
    sConfigOC.OCPolarity = TIM_OCPOLARITY_HIGH;
    sConfigOC.OCFastMode = TIM_OCFAST_DISABLE;
    if (HAL_TIM_PWM_ConfigChannel(&htim4, &sConfigOC, TIM_CHANNEL_3) != HAL_OK)
    {
        Error_Handler();
    }
    __HAL_RCC_GPIOB_CLK_ENABLE();
    /**TIM4 GPIO Configuration
    PB8     ------> TIM4_CH3
    */
    GPIO_InitStruct.Pin = LCD_BACKLIGHT_Pin;
    GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
    /* GPIO_InitStruct.Mode = GPIO_MODE_OUTPUT_PP; */
    GPIO_InitStruct.Pull = GPIO_NOPULL;
    GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_HIGH;
    GPIO_InitStruct.Alternate = GPIO_AF2_TIM4;
    HAL_GPIO_Init(LCD_BACKLIGHT_GPIO_Port, &GPIO_InitStruct);
    HAL_GPIO_WritePin(GPIOB, LCD_BACKLIGHT_Pin, GPIO_PIN_SET);
    HAL_TIM_PWM_Start(&htim4, TIM_CHANNEL_3);
}

void lcd_init(void) {
    LV_LOG_INFO("LCD Initialization");
    lcd_backlight_init();
    lcd_sram_init();
    lcd_dma2d_init();
    lcd_mdma_fcm_init();
}

CRITICAL void lcd_backlight(uint32_t value) { // 0-100
    if (value) {
        htim4.Instance->CCR3 = value;
        HAL_TIM_PWM_Start(&htim4, TIM_CHANNEL_3);
    } else {
        HAL_TIM_PWM_Stop(&htim4, TIM_CHANNEL_3);
    }
}

CRITICAL void read_register(uint8_t command, void *location, uint32_t bits, uint32_t num) {
    write_cmd(command);

    // loosen timings
    FMC_NORSRAM_TimingTypeDef Timing = {0};
    Timing.AddressSetupTime = 15;
    Timing.AddressHoldTime = 15;
    Timing.DataSetupTime = 255;
    Timing.BusTurnAroundDuration = 5;
    Timing.CLKDivision = 16;
    Timing.DataLatency = 17;
    Timing.AccessMode = FMC_ACCESS_MODE_A;
    FMC_NORSRAM_Timing_Init(FMC_NORSRAM_DEVICE, &Timing, FMC_NORSRAM_BANK1);

    uint16_t *location16 = (uint16_t *) location;
    uint8_t *location8 = (uint8_t *) location;
    if (bits) while(num--) { read_data_16bit(location16++); }
    else while(num--) { read_data_8bit(location8++); }
    // restore timings
    Timing.AddressSetupTime = 0; // 0
    Timing.AddressHoldTime = 2; // 2
    Timing.DataSetupTime = 5; // 3
    Timing.BusTurnAroundDuration = 4;
    Timing.CLKDivision = 16;
    Timing.DataLatency = 17;
    Timing.AccessMode = FMC_ACCESS_MODE_A;
    FMC_NORSRAM_Timing_Init(FMC_NORSRAM_DEVICE, &Timing, FMC_NORSRAM_BANK1);
}

CRITICAL void lcd_fill(uint32_t x1, uint32_t y1, uint32_t x2, uint32_t y2, uint16_t color) {
#else
CRITICAL void lcd_fill(uint32_t x1, uint32_t y1, uint32_t x2, uint32_t y2, uint32_t color) {
#endif
   lcd_set_address_window(x1, y1, x2, y2);
   write_cmd(ILI_MEMORY_WRITE);
   lcd_fill_pixels(((x2-x1) + 1) * ((y2-y1) + 1), color);
}

// does nothing, we do not have a frame buffer
void lcd_update(void) {
}


CRITICAL int lcd_start(void) {
    LV_LOG_INFO("LCD Start of configuration");
    /* write_cmd(0x00); */
    /* write_data(0x0001); */
    /* write_cmd(ILI_SLEEP_OUT); */
    /* HAL_Delay(170); */

    if (!detect_lcd()) {
        return 0;
    }

    for (int i = 0; i < STARTUP_COMMAND_LENGTH; i++) {
        write_cmd(ili_startup_cmds[i].cmd);
        for (int x = 0; x < ili_startup_cmds[i].data_length; x++) {
            write_data_8bit(ili_startup_cmds[i].data[x]);
        }
    }
    write_cmd(ILI_SLEEP_OUT);
    /* HAL_Delay(60); */
    write_cmd(ILI_DISPLAY_ON);
    /* HAL_Delay(100); // 186? */
  
    write_cmd(ILI_DISPLAY_INVERSION_ON);
#ifdef DEBUG
    lcd_fill(0, 0, 320, 480, RGB(255, 0, 255));
#else
    lcd_fill(0, 0, 320, 480, RGB(0, 0, 0));
#endif
    return 1;
}

void lcd_test(void) {

}


CRITICAL void lcd_lvgl_flush(lv_display_t *display, const lv_area_t *area, uint8_t *pixmap) {
    uint32_t *pixels = (uint32_t *) (pixmap);
    uint16_t length =((area->y2 - area->y1) + 1);
    uint16_t width = ((area->x2 - area->x1) + 1);
    uint32_t fb = (uint32_t) framebuffer;
/* #if PIXEL_BUFFER_SIZE == (DISPLAY_WIDTH * COLOR_SIZE  * DISPLAY_HEIGHT) */
/*     // direct, always draw whole lines */
/*     pixels += (DISPLAY_WIDTH * area->y1); */
/*     lcd_set_address_window(0, area->y1, DISPLAY_WIDTH - 1, area->y2); */
/*     width = DISPLAY_WIDTH; */
/* #else */
/*     lcd_set_address_window(area->x1, area->y1, area->x2, area->y2); */
/* #endif */
    /* LV_LOG_INFO("Starting flush: %3dx%3dx%3dx%3d :: %5d :: %08X", area->x1, area->y1, area->x2, area->y2, length, (uint32_t) pixmap); */
    /* write_cmd(ILI_MEMORY_WRITE); */
    remotedisp = display; // store display for irq
    /* SCB_CleanInvalidateDCache(); // cache cleanup not needed */
    DMA2D->CR = LL_DMA2D_MODE_M2M_PFC | LL_DMA2D_IT_TCIE; // int enable, set m2m pfc mode
    DMA2D->FGMAR = (uint32_t) pixels;
    DMA2D->FGOR = 0;
    DMA2D->FGPFCCR = LL_DMA2D_INPUT_MODE_ARGB8888;
    DMA2D->OPFCCR = LL_DMA2D_OUTPUT_MODE_RGB888 | DMA2D_OPFCCR_RBS | DMA2D_OPFCCR_SB; // Convert endianess by dual swapping
    DMA2D->OMAR = (uint32_t) (fb) + (((area->y1 * 320) + area->x1) * COLOR_SIZE);
    DMA2D->OOR = DISPLAY_WIDTH - width;
    DMA2D->NLR = (width << 16) | (length);
    /* LV_LOG_INFO("%d %d %d %d %08X %08X %08X %08X", area->x1, area->y1, area->x2, area->y2, DMA2D->OMAR, DMA2D->FGMAR, DMA2D->NLR, pixels);  */
    DMA2D->CR |= 1;
    /* HAL_MDMA_PollForTransfer(&hmdma_mdma_channel1_sw_0, HAL_MDMA_FULL_TRANSFER, 100); */
    /* if (display != NULL) lv_display_flush_ready(display); */

    // redraw entire buffer
    /* lcd_set_address_window(area->x1, area->y2, DISPLAY_WIDTH, DISPLAY_HEIGHT); */
    /* write_cmd(ILI_MEMORY_WRITE); */
    /* HAL_MDMA_Start_IT(&hmdma_mdma_channel1_sw_0, (uintptr_t) pixmap, (uintptr_t) 0x60020000, width * COLOR_SIZE, length); */
}


#if LVGL_VERSION_MAJOR == 9
CRITICAL void lcd_draw_large_text(uint32_t x, uint32_t y, const lv_image_dsc_t *img, lv_color_t clr) {
    uint16_t color = lv_color_to_u16(clr);
    if (img->header.cf == LV_COLOR_FORMAT_I1) {
#else
CRITICAL void lcd_draw_large_text(uint32_t x, uint32_t y, const lv_img_dsc_t *img, lv_color_t color) {
    if (img->header.cf == LV_IMG_CF_INDEXED_1BIT) {
#endif
        // images stored as 1bpp, need to iterate over and draw raw
#ifdef DMA_WRITE
        // items are 148*88, so 37 cycles
#define BLOB_LINES 4 
#define BLOB_SIZE (88*BLOB_LINES)
        uint16_t blob[BLOB_SIZE]; // expand and dma draw
        uint16_t blob2[BLOB_SIZE]; // expand and dma draw
        uint16_t *cb = NULL;
        uint8_t *data = (uint8_t *) img->data;
        data += 8;
        int cycles = 0;
        cb = (cb == blob) ? blob2 : blob ;
        while(cycles < 148 / BLOB_LINES) {
            // expand
            int32_t i = 0;
            while(i < BLOB_SIZE) {
                register uint32_t vdata = *data;
#if LVGL_VERSION_MAJOR == 8
                cb[i++] = (vdata & 0x80) ? 0x0000 : color.full;
                cb[i++] = (vdata & 0x40) ? 0x0000 : color.full;
                cb[i++] = (vdata & 0x20) ? 0x0000 : color.full;
                cb[i++] = (vdata & 0x10) ? 0x0000 : color.full;
                cb[i++] = (vdata & 0x08) ? 0x0000 : color.full;
                cb[i++] = (vdata & 0x04) ? 0x0000 : color.full;
                cb[i++] = (vdata & 0x02) ? 0x0000 : color.full;
                cb[i++] = (vdata & 0x01) ? 0x0000 : color.full;
#else 
                cb[i++] = (vdata & 0x80) ? 0x0000 : color;
                cb[i++] = (vdata & 0x40) ? 0x0000 : color;
                cb[i++] = (vdata & 0x20) ? 0x0000 : color;
                cb[i++] = (vdata & 0x10) ? 0x0000 : color;
                cb[i++] = (vdata & 0x08) ? 0x0000 : color;
                cb[i++] = (vdata & 0x04) ? 0x0000 : color;
                cb[i++] = (vdata & 0x02) ? 0x0000 : color;
                cb[i++] = (vdata & 0x01) ? 0x0000 : color;
#endif
                data++;
            }
            // wait
            while(!dma_ready);
            // set address
            lcd_set_address_window(x, y, x + img->header.w - 1, y + (BLOB_LINES - 1) < (y + img->header.h - 1) ? y + (BLOB_LINES - 1) : (y + img->header.h - 1));
            // send
            write_cmd(ILI_MEMORY_WRITE);
            DATA;
            /* dma_write(cb, BLOB_SIZE, x + img->header.w - 1, y + (BLOB_LINES - 1) < (y + img->header.h - 1) ? y + (BLOB_LINES - 1) : (y + img->header.h - 1)); */
            y += BLOB_LINES;
            cycles++;
            cb = (cb == blob) ? blob2 : blob;
        }
        while(!dma_ready);
#else
        lcd_set_address_window(x, y, x + img->header.w - 1, y + img->header.h - 1);
        uint32_t length = (img->header.w * img->header.h) >> 3;
        uint8_t *data = (uint8_t *) img->data;
        data += 8;
        write_cmd(ILI_MEMORY_WRITE);
        while(length--) {
            // convert
            register uint32_t vdata = *data;
#if LVGL_VERSION_MAJOR == 8
            write_data((vdata & 0x80) ? 0x0000 : color.full);
            write_data((vdata & 0x40) ? 0x0000 : color.full);
            write_data((vdata & 0x20) ? 0x0000 : color.full);
            write_data((vdata & 0x10) ? 0x0000 : color.full);
            write_data((vdata & 0x08) ? 0x0000 : color.full);
            write_data((vdata & 0x04) ? 0x0000 : color.full);
            write_data((vdata & 0x02) ? 0x0000 : color.full);
            write_data((vdata & 0x01) ? 0x0000 : color.full);
#else 
            write_data((vdata & 0x80) ? 0x0000 : color);
            write_data((vdata & 0x40) ? 0x0000 : color);
            write_data((vdata & 0x20) ? 0x0000 : color);
            write_data((vdata & 0x10) ? 0x0000 : color);
            write_data((vdata & 0x08) ? 0x0000 : color);
            write_data((vdata & 0x04) ? 0x0000 : color);
            write_data((vdata & 0x02) ? 0x0000 : color);
            write_data((vdata & 0x01) ? 0x0000 : color);
#endif
            data++;
        }
#endif
    }
}
